# tinyexif

./: CMakeLists.txt  README.md  TestSamples.py  main.cpp  tinyexif.cpp  tinyexif.h
